icon ie fix

--- a/client/css/style.styl
+++ b/client/css/style.styl
@@ -32,6 +32,7 @@ h1,h2,h3,h4,h5,h6
   font-family 'Ubuntu', sans-serif
   line-height 1.5em
   color text-dark
+  font-weight 700
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a
   color inherit
